<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/temadegradado"
    android:orientation="vertical"
    android:paddingVertical="160sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/temadegradadoinverso"
        android:padding="60dp">

        <TextView
            android:id="@+id/txtvw_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textStyle="bold"
            android:textColor="@color/blanco"
            android:layout_centerHorizontal="true"
            android:layout_margin="20sp"/>

        <TextView
            android:id="@+id/txtvw_temperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatura"
            android:textStyle="bold"
            android:textColor="@color/blanco"
            android:layout_alignParentStart="true"
            android:layout_below="@id/txtvw_fecha"
            android:layout_marginBottom="20sp"/>

        <TextView
            android:id="@+id/txtvw_humedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humedad"
            android:textStyle="bold"
            android:textColor="@color/blanco"
            android:layout_below="@id/txtvw_fecha"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20sp"/>

        <TextView
            android:id="@+id/txtvw_latitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitud"
            android:textColor="@color/blanco"
            android:layout_alignParentStart="true"
            android:layout_below="@id/txtvw_temperatura"/>

        <TextView
            android:id="@+id/txtvw_longitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitud"
            android:textColor="@color/blanco"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/txtvw_humedad"/>

    </RelativeLayout>


</LinearLayout>